--- a/index.html
+++ b/index.html
@@ -475,8 +475,8 @@
     <div class="member-role">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Project<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Manager</div>
   </div>
   <div class="team-member">
-    <img src="Images/SHERLON.jpg" alt="Sherlon"><br><br>
-    <span class="member-name">Sherlon</span>
+    <img src="Images/SHERLON.jpg" alt="Sherlin"><br><br>
+    <span class="member-name">Sherlin</span>
     <div class="member-role">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Programmer</div>
   </div>
   <div class="team-member">
